--- a/app/src/main/res/layout/item_appliance.xml
+++ b/app/src/main/res/layout/item_appliance.xml
@@ -11,7 +11,7 @@
         android:padding="20dp"
         android:background="@drawable/contour"
         android:layout_marginVertical="5dp"
-        >
+        android:layout_gravity="center">
     <LinearLayout
         android:id="@+id/appliance"
         android:layout_width="wrap_content"
